# eidetic

./: .gitignore  README.md
backend/: .gitignore  package.json  worker.js  wrangler.toml
eidetic/: Cargo.toml  README.md  USER_GUIDE.md
eidetic/docs/launch/: documentation_guidelines.md  reddit_post.md  sales_strategy.md
eidetic/src/: cipher.rs  db.rs  fs.rs  license.rs  main.rs  model.rs  worker.rs
