[package]
name = "eidetic"
version = "0.1.0"
edition = "2021"

[dependencies]
fuser = "0.14" 
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
candle-core = "0.8.0"
candle-transformers = "0.8.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
pdf-extract = "0.7.4"
image = "0.25"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
dirs = "6.0.0"
daemonize = "0.5"
ignore = "0.4"
